Attempt fix for slide images getting squished on view resize

--- a/style/style.css
+++ b/style/style.css
@@ -83,6 +83,7 @@ nav a:hover {
 }
 
 .all-slides{
+    object-fit: cover;
     display: none;
     width: auto;
     height: 75vh;
